--- a/css/stilusdus.css
+++ b/css/stilusdus.css
@@ -1,10 +1,10 @@
 body
 {
-    background-color:tan;
+    background-color:rgb(171, 212, 216);
 }
 .box
 {
-    background-color:#3d4543;
+    background-color:#2d608f;
     height:300px;
     width:250px;
     border-radius:10px;
